fix: add overflow hidden to parallax sec

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -631,6 +631,10 @@ video {
   gap: 2rem;
 }
 
+.overflow-hidden {
+  overflow: hidden;
+}
+
 .rounded-full {
   border-radius: 9999px;
 }
